--- a/CSS/Admin/adminStyle.css
+++ b/CSS/Admin/adminStyle.css
@@ -10,33 +10,40 @@
 
 #header {
     /*background-image:url("../Images/bg.gif");*/
-    background-color:#1de2ff;
+    background-color:rgb(32,38,64);
     border-top:2px solid #000000;
     border-bottom:2px solid #000000;
     color:#ffffff;
-    height: 90px;
+    height: 60px;
     width:100%;
     float:left;
 }
 
-#header-left {
+#header-logo {
+    margin-top:10px;
     text-align:center;
     width: 20%;
-    height: 90px;
+    height: 60px;
     font-family:'MS Gothic';
     font-size:42px;
     float:left;
-    color:#000000;
+    color:#fff;
 }
 
-#header-right {
+#header-{
+    margin-top:10px;
     text-align:center;
     width: 500px;
-    height: 90px;
+    height: 60px;
     font-family:'MS Gothic';
     font-size:36px;
     float:right;
-    color:#000000;
+    color:#fff;
+    float:right;
+}
+#header-logout
+{
+	float:right;
 }
 #main {
     height:auto;
@@ -46,15 +53,15 @@
 
 #sidebar {
     /*background-image:url("../Images/bg.gif");*/
-    padding-top:18px;
-    padding-bottom:18px;
+    padding-top:34px;
+    padding-bottom:34px;
     background-color:#ffffff;
     height:auto;
     width: 20%;
   float:left;
 }
 #content-main {
-    width:79%;
+    width:77%;
 	height:auto;
 	margin-top:13px;
 	margin-left:10px;
@@ -83,7 +90,7 @@ text-decoration:none;
 }
 
 #footer {
-    background-color:#1de2ff;
+    background-color:rgb(32,38,64);
     border-top:2px solid #000000;
     border-bottom:2px solid #000000;
     height: 50px;
@@ -105,12 +112,13 @@ text-decoration:none;
 
 .buttons {
     /*background-image:url("../Images/bt-bg.jpg");*/
-    background-color:#ffffff;
+    padding-top:5px;
+    background-color:rgb(32,38,64);
     margin-bottom:3px;
     margin-top:3px;
     margin-left:4px;
     margin-right:2px;
-    color:#000000;
+    color:#ffffff;
     cursor:pointer;
     font-family:'Lucida Console';
     font-size:16px;
@@ -121,10 +129,10 @@ text-decoration:none;
     height: 55px;
     width:95%;
 }
+
 .buttons:hover {
-    background-color:#1de2ff;
+    background-color:#464d70;
     color: #ffffff;
-    box-shadow:#000000 2px 2px;
 }
 .buttons:active {
     position:relative;
@@ -132,4 +140,27 @@ text-decoration:none;
 }
    
 
+.btn {
+    float:right;
+    margin-right:50px;
+    margin-top:10px;
+	cursor:pointer;
+	height:40px;
+	width:100px;
+	background-color:#ffffff;
+	color:#000;
+	border-color:#333;
+	font-size:16px;
+	border-radius:5px;
+    transition: background-color ease 0.8s;
+    -moz-transition: background-color ease 0.8s;
+    -o-transition: background-color ease 0.8s;
+    -webkit-transition: background-color ease 0.8s;
+}
+.btn:hover {
+	background-color:#EDEDDF;
+}
+.btn {
+    outline: none;
+}
 
